--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,6 +15,7 @@ defaults:
     shell: bash
 
 env:
+  #TODO: change to actual
   PUBLIC_IMAGE_REPO: gcr.io/cf-build-service-dev-219913/bohanc/kpack
   # PUBLIC_IMAGE_REPO: gcr.io/cf-build-service-public/kpack
   PACK_VERSION: 0.29.0
@@ -56,7 +57,16 @@ jobs:
 
         ./pack version
 
+    # TODO: delete this once we get the workflow working
+    - name: Cache images
+      id: cache-images-windows
+      uses: actions/cache@v3
+      with:
+        path: images-windows
+        key: images-windows
+
     - name: Build images
+      if: ${{ steps.cache-images-windows.outputs.cache-hit != 'true' }}
       run: |
         export PATH="$PATH:$(pwd)"
 
@@ -67,14 +77,14 @@ jobs:
 
         PACK_OPTS="--builder gcr.io/dotnet-build-gcp/go-multios/builder-windows --trust-builder"
 
-        mkdir images
+        mkdir images-windows
 
         # usage: pack_save source tag
         pack_save() {
           pack build "$2" $PACK_OPTS \
             --env BP_GO_TARGETS="$1" \
             --env BP_GO_LDFLAGS="-X 'github.com/pivotal/kpack/cmd.Version=${KPACK_VERSION}' -X 'github.com/pivotal/kpack/cmd.Commit=${KPACK_COMMIT}"
-          docker save $2 > "images/$2.tar"
+          docker save $2 > "images-windows/$2.tar"
         }
 
         pack_save '.\cmd\completion' completion-windows
@@ -84,7 +94,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: images-windows
-        path: images/*.tar
+        path: images-windows/*.tar
 
   build-images-linux:
     runs-on: ubuntu-latest
@@ -102,7 +112,16 @@ jobs:
       with:
         pack-version: ${{ env.PACK_VERSION }}
 
+    # TODO: delete this once we get the workflow working
+    - name: Cache images
+      id: cache-images-linux
+      uses: actions/cache@v3
+      with:
+        path: images-linux
+        key: images-linux
+
     - name: Build images
+      if: ${{ steps.cache-images-linux.outputs.cache-hit != 'true' }}
       run: |
         [[ $GITHUB_REF =~ ^refs\/heads\/release\/(.*)$ ]] && version=${BASH_REMATCH[1]} || version=0.0.0
 
@@ -110,14 +129,14 @@ jobs:
         KPACK_COMMIT=$GITHUB_SHA
         PACK_OPTS="--network host --builder paketobuildpacks/builder-jammy-tiny"
 
-        mkdir images
+        mkdir images-linux
 
         # usage: pack_save source tag
         pack_save() {
           pack build "$2" $PACK_OPTS \
             --env BP_GO_TARGETS="$1" \
             --env BP_GO_LDFLAGS="-X 'github.com/pivotal/kpack/cmd.Version=${KPACK_VERSION}' -X 'github.com/pivotal/kpack/cmd.Commit=${KPACK_COMMIT}"
-          docker save $2 > "images/$2.tar"
+          docker save $2 > "images-linux/$2.tar"
         }
 
         pack_save ./cmd/controller controller
@@ -129,18 +148,18 @@ jobs:
 
         output=$(go run ./hack/lifecycle/main.go --tag=lifecycle --publish=false 2>&1)
         IMAGE=$(echo "$output" | grep "saved lifecycle" | awk -F  "saved lifecycle image: " '{print $2}')
-        docker save $IMAGE > lifecycle.tar
+        docker save $IMAGE > images-linux/lifecycle.tar
 
     - name: Upload images
       uses: actions/upload-artifact@v3
       with:
         name: images-linux
-        path: images/*.tar
+        path: images-linux/*.tar
 
   e2e:
     needs:
       - build-images-linux
-      - build-images-windows
+      # - build-images-windows
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -157,7 +176,8 @@ jobs:
     - name: Setup carvel
       uses: carvel-dev/setup-action@v1
       with:
-        only: ytt
+        token: ${{ secrets.RELEASE_TOKEN }}
+        only: ytt, kapp
 
     - name: Download images
       uses: actions/download-artifact@v3
@@ -169,8 +189,8 @@ jobs:
         user="test"
         pass="test"
 
-        echo "Generating user"
-        htpasswd -Bbn "$user" "$pass" > htpasswd
+        echo "Generating users"
+        htpasswd -Bbn "$user" "$pass" >> htpasswd # authenticated user for tests
 
         # the registry can be accessed from inside the kind cluster via it's name.
         # however, due to a quirk with ggcr, it will force https connections UNLESS
@@ -183,11 +203,12 @@ jobs:
         if [ "$(docker inspect -f '{{.State.Running}}' "${reg_name}" 2>/dev/null || true)" != 'true' ]; then
           docker run --detach \
             --name "$name" \
-            --publish "5000:5000" \
             -v "$(pwd)/htpasswd:/auth/htpasswd" \
             -e "REGISTRY_AUTH=htpasswd" \
             -e "REGISTRY_AUTH_HTPASSWD_REALM=Registry Realm" \
             -e "REGISTRY_AUTH_HTPASSWD_PATH=/auth/htpasswd" \
+            -e "REGISTRY_STORAGE_DELETE_ENABLED=true" \
+            --publish "5000:5000" \
             registry:2
         fi
 
@@ -196,7 +217,9 @@ jobs:
         echo "REGISTRY_PASS=$pass" >> $GITHUB_ENV
 
         # alias registry.local to localhost
-        echo "127.0.0.1 registry.local" | sudo tee -a /etc/hosts
+        # ip=$(docker container inspect $name --format '{{ .NetworkSettings.Networks.kind.IPAddress }}')
+        ip=127.0.0.1
+        echo "$ip registry.local" | sudo tee -a /etc/hosts
 
         cat <<EOF > kind.yaml
         kind: Cluster
@@ -219,26 +242,80 @@ jobs:
         docker network connect kind registry.local
 
         crane auth login ${{ env.REGISTRY_URL }} --username ${{ env.REGISTRY_USER }} --password ${{ env.REGISTRY_PASS }}
+        mkdir digests
         for image in *.tar; do
-          crane push $image "${{ env.REGISTRY_URL }}/${image%.tar}"
+          name=${image%.tar}
+          crane push $image "${{ env.REGISTRY_URL }}/${name}" --image-ref "digests/${name}"
         done
 
+        cat <<EOF > pull-secrets.yaml
+        #@ load("@ytt:overlay", "overlay")
+        ---
+        apiVersion: v1
+        kind: Secret
+        metadata:
+          name: pull-secret
+          namespace: kpack
+        type: kubernetes.io/dockerconfigjson
+        stringData:
+          .dockerconfigjson: '{"auths":{"${{ env.REGISTRY_URL }}":{"username":"${{ env.REGISTRY_USER }}","password":"${{ env.REGISTRY_PASS }}"}}}'
+        #@overlay/match by=overlay.subset({"kind": "ServiceAccount"}), expects="1+"
+        ---
+        #@overlay/match missing_ok=True
+        secrets:
+          - name: pull-secret
+        #@overlay/match missing_ok=True
+        imagePullSecrets:
+          - name: pull-secret
+
+        #@overlay/match by=overlay.subset({"metadata":{"name":"lifecycle-image"}, "kind": "ConfigMap"})
+        ---
+        data:
+          #@overlay/match missing_ok=True
+          serviceAccountRef.name: controller
+          #@overlay/match missing_ok=True
+          serviceAccountRef.namespace: kpack
+        EOF
+
         ytt -f config/ \
-          -v controller_image=localhost:5000/controller \
-          -v webhook_image=localhost:5000/webhook \
-          -v build_init_image=localhost:5000/build-init \
+          -f pull-secrets.yaml \
+          -v controller_image=$(cat digests/controller) \
+          -v webhook_image=$(cat digests/webhook) \
+          -v build_init_image=$(cat digests/build-init) \
           -v build_init_windows_image=not_used \
-          -v build_waiter_image=localhost:5000/build-waiter \
-          -v rebase_image=localhost:5000/rebase \
-          -v completion_image=localhost:5000/completion \
+          -v build_waiter_image=$(cat digests/build-waiter) \
+          -v rebase_image=$(cat digests/rebase) \
+          -v completion_image=$(cat digests/completion) \
           -v completion_windows_image=not_used \
-          -v lifecycle_image=localhost:5000/lifecycle > release.yaml
+          -v lifecycle_image=$(cat digests/lifecycle) > release.yaml
+
+        cat release.yaml
 
     - name: Run tests
       run: |
-        kubectl apply -f release.yaml
+        kapp deploy -a kpack -y -f release.yaml
+
+        set +e
+        kubectl apply -f clusterstack.yaml -f clusterstore.yaml -f clusterbuilder.yaml -f builder.yaml -f image.yaml
+
+        sleep 60
+        kubectl get clusterstore -o yaml
+        kubectl get clusterstack -o yaml
+        kubectl get clusterbuilder -o yaml
+        kubectl get builder -o yaml
+        kubectl get image -o yaml
+
+        sleep 120
+        kubectl get clusterstore -o yaml
+        kubectl get clusterstack -o yaml
+        kubectl get clusterbuilder -o yaml
+        kubectl get builder -o yaml
+        kubectl get image -o yaml
 
         export IMAGE_REGISTRY=${{ env.REGISTRY_URL }}
         export IMAGE_REGISTRY_USERNAME=${{ env.REGISTRY_USER }}
         export IMAGE_REGISTRY_PASSWORD=${{ env.REGISTRY_PASS }}
+
+        set -e
         make e2e
+
