--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: Build
+name: ci
 
 on:
   push:
@@ -16,9 +16,11 @@ defaults:
 
 env:
   #TODO: change to actual
-  PUBLIC_IMAGE_REPO: gcr.io/cf-build-service-dev-219913/bohanc/kpack
+  PUBLIC_IMAGE_DEV_REPO: gcr.io/cf-build-service-public/kpack-dev
+  PUBLIC_IMAGE_REPO: gcr.io/cf-build-service-public/kpack-test
   # PUBLIC_IMAGE_REPO: gcr.io/cf-build-service-public/kpack
   PACK_VERSION: 0.29.0
+  CRANE_WINDOWS_VERSION: 0.14.0
 
 jobs:
   unit:
@@ -38,7 +40,7 @@ jobs:
     - name: Report coverage
       run: bash <(curl -s https://codecov.io/bash)
       env:
-        CODECOV_TOKEN: 4e256ab5-d474-459d-8d4d-cffea6455db7
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
   build-images-windows:
     runs-on: windows-2019
@@ -83,14 +85,14 @@ jobs:
         pack_save() {
           pack build "$2" $PACK_OPTS \
             --env BP_GO_TARGETS="$1" \
-            --env BP_GO_LDFLAGS="-X 'github.com/pivotal/kpack/cmd.Version=${KPACK_VERSION}' -X 'github.com/pivotal/kpack/cmd.Commit=${KPACK_COMMIT}"
+            --env BP_GO_LDFLAGS="-X 'github.com/pivotal/kpack/cmd.Version=${KPACK_VERSION}' -X 'github.com/pivotal/kpack/cmd.Commit=${KPACK_COMMIT}'"
           docker save $2 > "images-windows/$2.tar"
         }
 
         pack_save '.\cmd\completion' completion-windows
         pack_save '.\cmd\build-init;.\cmd\network-wait-launcher' build-init-windows
 
-    - name: Upload images
+    - name: Upload Image Artifacts
       uses: actions/upload-artifact@v3
       with:
         name: images-windows
@@ -135,7 +137,7 @@ jobs:
         pack_save() {
           pack build "$2" $PACK_OPTS \
             --env BP_GO_TARGETS="$1" \
-            --env BP_GO_LDFLAGS="-X 'github.com/pivotal/kpack/cmd.Version=${KPACK_VERSION}' -X 'github.com/pivotal/kpack/cmd.Commit=${KPACK_COMMIT}"
+            --env BP_GO_LDFLAGS="-X 'github.com/pivotal/kpack/cmd.Version=${KPACK_VERSION}' -X 'github.com/pivotal/kpack/cmd.Commit=${KPACK_COMMIT}'"
           docker save $2 > "images-linux/$2.tar"
         }
 
@@ -145,21 +147,111 @@ jobs:
         pack_save ./cmd/rebase rebase
         pack_save ./cmd/build-waiter build-waiter
         pack_save ./cmd/completion completion
-
+        
         output=$(go run ./hack/lifecycle/main.go --tag=lifecycle --publish=false 2>&1)
         IMAGE=$(echo "$output" | grep "saved lifecycle" | awk -F  "saved lifecycle image: " '{print $2}')
         docker save $IMAGE > images-linux/lifecycle.tar
 
-    - name: Upload images
+    - name: Upload Image Artifacts
       uses: actions/upload-artifact@v3
       with:
         name: images-linux
         path: images-linux/*.tar
 
+  push-images:
+    runs-on: ubuntu-latest
+    needs:
+    - build-images-linux
+    - build-images-windows
+    steps:
+    - name: Setup crane
+      uses: imjasonh/setup-crane@v0.3
+
+    - name: Setup carvel
+      uses: carvel-dev/setup-action@v1
+      with:
+        token: ${{ secrets.RELEASE_TOKEN }}
+        only: ytt, kapp
+
+    - name: Download artifacts
+      uses: actions/download-artifact@v3
+
+    - name: Docker Login
+      uses: docker/login-action@v2.1.0
+      with:
+        registry: gcr.io
+        username: _json_key
+        password: ${{ secrets.GCR_PUBLIC_SA }}
+
+    - name: Push images
+      env:
+        gcr_token: ${{ secrets.GCR_PUBLIC_SA }}
+      run: |
+        mkdir image-refs
+        for image in **/*.tar; do
+          name=$(basename ${image%.tar})
+          crane push $image "${{ env.PUBLIC_IMAGE_DEV_REPO }}/${name}" --image-refs "image-refs/${name}"
+        done
+
+    - name: Upload image refs
+      uses: actions/upload-artifact@v3
+      with:
+        name: image-refs
+        path: image-refs/*
+
+  generate-pre-release-yaml:
+    runs-on: ubuntu-latest
+    needs:
+    - push-images
+    - build-images-linux
+    - build-images-windows
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Set up Go
+      uses: actions/setup-go@v3
+      with:
+        go-version-file: 'go.mod'
+
+    - name: Setup carvel
+      uses: carvel-dev/setup-action@v1
+      with:
+        token: ${{ secrets.RELEASE_TOKEN }}
+        only: ytt, kapp
+
+    - name: Download artifacts
+      uses: actions/download-artifact@v3
+      with:
+        name: image-refs
+
+    - name: Build release yaml
+      run: |        
+        ytt -f config/ \
+          -v controller_image=$(cat controller) \
+          -v webhook_image=$(cat webhook) \
+          -v build_init_image=$(cat build-init) \
+          -v build_init_windows_image=$(cat build-init-windows) \
+          -v build_waiter_image=$(cat build-waiter) \
+          -v rebase_image=$(cat rebase) \
+          -v completion_image=$(cat completion) \
+          -v completion_windows_image=$(cat completion-windows) \
+          -v lifecycle_image=$(cat lifecycle) > prerelease.yaml
+
+        cat prerelease.yaml
+
+    - name: Upload Pre-Release
+      uses: actions/upload-artifact@v3
+      with:
+        name: prerelease
+        path: prerelease.yaml
+
   e2e:
     needs:
+      - generate-pre-release-yaml
+      - push-images
       - build-images-linux
-      # - build-images-windows
+      - build-images-windows
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -179,10 +271,10 @@ jobs:
         token: ${{ secrets.RELEASE_TOKEN }}
         only: ytt, kapp
 
-    - name: Download images
+    - name: Download release
       uses: actions/download-artifact@v3
       with:
-        name: images-linux
+        name: prerelease
 
     - name: Setup local registry
       run: |
@@ -236,69 +328,59 @@ jobs:
         cluster_name: e2e
         config: kind.yaml
 
-    - name: Build release yaml
-      run: |
+    - name: Docker Login
+      uses: docker/login-action@v2.1.0
+      with:
+        registry: ${{ env.REGISTRY_URL }}
+        username: ${{ env.REGISTRY_USER }}
+        password: ${{ env.REGISTRY_PASS }}
+
+    - name: Run tests
+      run: |        
         # make the registry container accessible by name from inside the cluster
         docker network connect kind registry.local
 
-        crane auth login ${{ env.REGISTRY_URL }} --username ${{ env.REGISTRY_USER }} --password ${{ env.REGISTRY_PASS }}
-        mkdir digests
-        for image in *.tar; do
-          name=${image%.tar}
-          crane push $image "${{ env.REGISTRY_URL }}/${name}" --image-refs "digests/${name}"
-        done
-
-        # add local registry auth details to kpack
-        cat <<EOF > pull-secrets.yaml
-        #@ load("@ytt:overlay", "overlay")
-        ---
-        apiVersion: v1
-        kind: Secret
-        metadata:
-          name: pull-secret
-          namespace: kpack
-        type: kubernetes.io/dockerconfigjson
-        stringData:
-          .dockerconfigjson: '{"auths":{"${{ env.REGISTRY_URL }}":{"username":"${{ env.REGISTRY_USER }}","password":"${{ env.REGISTRY_PASS }}"}}}'
-        #@overlay/match by=overlay.subset({"kind": "ServiceAccount"}), expects="1+"
-        ---
-        #@overlay/match missing_ok=True
-        secrets:
-          - name: pull-secret
-        #@overlay/match missing_ok=True
-        imagePullSecrets:
-          - name: pull-secret
-
-        #@overlay/match by=overlay.subset({"metadata":{"name":"lifecycle-image"}, "kind": "ConfigMap"})
-        ---
-        data:
-          #@overlay/match missing_ok=True
-          serviceAccountRef.name: controller
-          #@overlay/match missing_ok=True
-          serviceAccountRef.namespace: kpack
-        EOF
-
-        ytt -f config/ \
-          -f pull-secrets.yaml \
-          -v controller_image=$(cat digests/controller) \
-          -v webhook_image=$(cat digests/webhook) \
-          -v build_init_image=$(cat digests/build-init) \
-          -v build_init_windows_image=not_used \
-          -v build_waiter_image=$(cat digests/build-waiter) \
-          -v rebase_image=$(cat digests/rebase) \
-          -v completion_image=$(cat digests/completion) \
-          -v completion_windows_image=not_used \
-          -v lifecycle_image=$(cat digests/lifecycle) > release.yaml
-
-        cat release.yaml
-
-    - name: Run tests
-      run: |
-        kapp deploy -a kpack -y -f release.yaml
+        kapp deploy -a kpack -y -f prerelease.yaml
 
         export IMAGE_REGISTRY=${{ env.REGISTRY_URL }}
         export IMAGE_REGISTRY_USERNAME=${{ env.REGISTRY_USER }}
         export IMAGE_REGISTRY_PASSWORD=${{ env.REGISTRY_PASS }}
+
+        make e2e
+        kapp delete -a kpack -y
+
+    - name: Run tests with Istio
+      run: |
+        helm repo add istio https://istio-release.storage.googleapis.com/charts
+        helm repo update
+        kubectl create namespace istio-system
+        helm install istio-base istio/base -n istio-system --wait
+        helm install istiod istio/istiod -n istio-system --wait    
+        
+        cat <<EOF > overlay.yaml
+        #@ load("@ytt:overlay", "overlay")
+        #@overlay/match by=overlay.subset({"metadata":{"name":"kpack-controller"}, "kind": "Deployment"})
+        ---
+        spec:
+          template:
+            spec:
+              containers:
+              #@overlay/match by="name"
+              - name: controller
+                #@overlay/match-child-defaults missing_ok=True
+                env:
+                #@overlay/match by="name"
+                #@overlay/replace or_add=True
+                - name: INJECTED_SIDECAR_SUPPORT
+                  value: "true"
+        EOF
+        
+        ytt -f prerelease.yaml -f overlay.yaml | kapp deploy -a kpack -y -f-
+
+        export IMAGE_REGISTRY=${{ env.REGISTRY_URL }}
+        export IMAGE_REGISTRY_USERNAME=${{ env.REGISTRY_USER }}
+        export IMAGE_REGISTRY_PASSWORD=${{ env.REGISTRY_PASS }}
+        export KPACK_TEST_NAMESPACE_LABELS="istio-injection=enabled"
 
         make e2e
 
@@ -306,6 +388,8 @@ jobs:
     needs:
       - unit
       - e2e
+      - generate-pre-release-yaml
+      - push-images
       - build-images-linux
       - build-images-windows
     if: ${{ startsWith(github.ref, 'refs/heads/release/') }}
@@ -331,6 +415,13 @@ jobs:
     - name: Download artifacts
       uses: actions/download-artifact@v3
 
+    - name: Docker Login
+      uses: docker/login-action@v2.1.0
+      with:
+        registry: gcr.io
+        username: _json_key
+        password: ${{ secrets.GCR_PUBLIC_SA }}
+
     - name: Parse branch name
       run: |
         echo "GITHUB_REF=${GITHUB_REF}"
@@ -341,37 +432,53 @@ jobs:
         fi
         echo "KPACK_VERSION=${version}" >> $GITHUB_ENV
 
-    - name: Publish images
+    - name: Promote images
       env:
         gcr_token: ${{ secrets.GCR_PUBLIC_SA }}
       run: |
-        echo "$gcr_token" | crane auth login gcr.io --username _json_key --password-stdin
-
-        mkdir digests
-        for image in **/*.tar; do
-          name=$(basename ${image%.tar})
-          crane push $image "${{ env.PUBLIC_IMAGE_REPO }}/${name}" --image-refs "digests/${name}"
+        mkdir final-image-refs
+        for image in image-refs/*; do
+          dev_image=$(cat $image)
+          digest=$(echo $dev_image| cut -d "@" -f 2)
+          
+          name=$(basename $image)
+          final_repo="${{ env.PUBLIC_IMAGE_REPO }}/${name}" 
+          
+          crane copy "$dev_image" "$final_repo"
+          
+          echo "${final_repo}@${digest}" > final-image-refs/$name
         done
+
+    - name: Upload image refs
+      uses: actions/upload-artifact@v3
+      with:
+        name: final-image-refs
+        path: final-image-refs/*
 
     - name: Generate release yaml
       id: release_yaml
       run: |
         file="release-${{ env.KPACK_VERSION }}.yaml"
         ytt -f config/ \
-          -v controller_image=$(cat digests/controller) \
-          -v webhook_image=$(cat digests/webhook) \
-          -v build_init_image=$(cat digests/build-init) \
-          -v build_init_windows_image=$(cat digests/build-init-windows) \
-          -v build_waiter_image=$(cat digests/build-waiter) \
-          -v rebase_image=$(cat digests/rebase) \
-          -v completion_image=$(cat digests/completion) \
-          -v completion_windows_image=$(cat digests/completion-windows) \
-          -v lifecycle_image=$(cat digests/lifecycle) \
+          -v controller_image=$(cat final-image-refs/controller) \
+          -v webhook_image=$(cat final-image-refs/webhook) \
+          -v build_init_image=$(cat final-image-refs/build-init) \
+          -v build_init_windows_image=$(cat final-image-refs/build-init-windows) \
+          -v build_waiter_image=$(cat final-image-refs/build-waiter) \
+          -v rebase_image=$(cat final-image-refs/rebase) \
+          -v completion_image=$(cat final-image-refs/completion) \
+          -v completion_windows_image=$(cat final-image-refs/completion-windows) \
+          -v lifecycle_image=$(cat final-image-refs/lifecycle) \
           -v version=${{ env.KPACK_VERSION }} > $file
-
         echo "sha=$(shasum -a 256 $file)" >> $GITHUB_OUTPUT
 
-    - name: Create Pre-release
+    - name: Upload Release
+      uses: actions/upload-artifact@v3
+      with:
+        name: release
+        path: release-${{ env.KPACK_VERSION }}.yaml
+
+    - name: Create Draft Release
       uses: softprops/action-gh-release@v1
       with:
         name: kpack v${{ env.KPACK_VERSION }}
