--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -191,6 +191,12 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+    - name: Docker Login
+      uses: docker/login-action@v2.1.0
+      with:
+        registry: ${{ secrets.REGISTRY_HOST }}
+        username: ${{ secrets.REGISTRY_USER }}
+        password: ${{ secrets.REGISTRY_PASSWORD }}
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
@@ -324,7 +330,7 @@ jobs:
             registry:2
         fi
 
-        echo "REGISTRY_URL=$name:5000" >> $GITHUB_ENV
+        echo "REGISTRY_URL=$name:5000/test" >> $GITHUB_ENV
         echo "REGISTRY_USER=$user" >> $GITHUB_ENV
         echo "REGISTRY_PASS=$pass" >> $GITHUB_ENV
 
